--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -7,3 +7,24 @@ html {
 *::after {
     box-sizing: border-box;
 }
+
+ul,
+li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+body {
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 24px;
+}
+
+.container {
+    max-width: 1170px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
