added section digital-product

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Quicksand';
     src: url('../fonts/Quicksand-Medium.woff2') format('woff2'),
         url('../fonts/Quicksand-Medium.woff') format('woff');
     font-weight: 500;
@@ -8,7 +8,7 @@
 
 
 @font-face {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Quicksand';
     src: url('../fonts/Quicksand-Bold.woff2') format('woff2'),
         url('../fonts/Quicksand-Bold.woff') format('woff');
     font-weight: 700;
@@ -18,7 +18,7 @@
 
 
 @font-face {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Quicksand';
     src: url('../fonts/Quicksand-Regular.woff2') format('woff2'),
         url('../fonts/Quicksand-Regular.woff') format('woff');
     font-weight: 400;
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Quicksand';
     src: url('../fonts/Quicksand-Light.woff2') format('woff2'),
         url('../fonts/Quicksand-Light.woff') format('woff');
     font-weight: 300;
