--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -232,3 +232,154 @@
 
 
 // end header
+
+
+// start digital-product
+
+.digital-product {
+    position: relative;
+    padding-top: 184px;
+    min-height: 726px;
+    // background-color: #441c7cc5;
+    background-image: linear-gradient(-90.0deg, #0030de 0%, #2e5afb 100%);
+    text-align: center;
+
+    &__title {
+        font-weight: 700;
+        font-size: 60px;
+        line-height: 70px;
+        color: #f3f3f8;
+        margin-bottom: 38px;
+    }
+
+    &__subtitle {
+        font-weight: 300;
+        font-size: 60px;
+        line-height: 70px;
+        color: #f3f3f8;
+    }
+
+    &__text {
+        font-size: 20px;
+        line-height: 22px;
+        font-weight: 500;
+        color: #f3f3f8;
+        margin-bottom: 68px;
+    }
+
+}
+
+.digital-product__btns {
+    margin-bottom: 140px;
+}
+
+.btn {
+    text-align: center;
+    border: none;
+    background-color: transparent;
+    padding: 12px 31px;
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: 400;
+    margin: 0 15px;
+    border-radius: 27.5px;
+}
+
+.btn--white {
+    color: #0674ec;
+    background-color: #fff;
+    transition: box-shadow 0.7s;
+
+    &:hover {
+        box-shadow: inset 0px 4px 5px 0px rgba(21, 75, 255, 0.5);
+    }
+}
+
+.btn--transparent {
+    color: #fff;
+    border: 1px solid #fff;
+    transition: box-shadow 0.7s;
+
+    &:hover {
+        box-shadow: inset 0px 4px 5px 0px rgba(255, 255, 255, 0.5);
+    }
+}
+
+.search {
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    max-width: 1140px;
+    text-align: center;
+    position: relative;
+    bottom: -67px;
+    height: 135px;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.07);
+    border-radius: 6px;
+    z-index: 4;
+    opacity: 1;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: -13px;
+        width: 1110px;
+        height: 135px;
+        background-color: rgba($color: #fff, $alpha: 0.5);
+        border-radius: 6px;
+        z-index: -1;
+    }
+
+    &::after {
+        content: "";
+        position: absolute;
+        top: -25px;
+        width: 1080px;
+        height: 135px;
+        background-color: rgba($color: #fff, $alpha: 0.5);
+        border-radius: 6px;
+        z-index: -1;
+    }
+
+    &__input {
+        width: 615px;
+        height: 55px;
+        border: 1px solid #dcdcdc;
+        border-radius: 4px 0 0 4px;
+        padding-left: 29px;
+
+        &::placeholder {
+            font-size: 16px;
+            line-height: 42px;
+            color: #676767;
+        }
+    }
+
+    &__list {
+        width: 195px;
+        height: 55px;
+        padding-left: 19px;
+        border: 1px solid #dcdcdc;
+        border-left: none;
+        font-size: 16px;
+        line-height: 42px;
+        color: #555555;
+    }
+
+    &__btn {
+        margin-left: 30px;
+        height: 55px;
+        background-color: #0674ec;
+        border-radius: 4px;
+        text-align: center;
+        padding: 0 68px;
+        border: none;
+        font-size: 16px;
+        line-height: 42px;
+        color: #ffffff;
+    }
+}
+
+// end digital-product
