--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -358,7 +358,26 @@
         }
     }
 
+    .lnr-chevron-down {
+        position: relative;
+    }
+
+    .lnr-chevron-down:before {
+        position: absolute;
+        right: 21px;
+        top: calc(50% - 6px);
+        font-size: 12px;
+        line-height: 12px;
+        font-weight: 400;
+        color: #676767;
+        width: 12px;
+        height: 12px;
+        z-index: 11;
+    }
+
     &__list {
+        cursor: pointer;
+        appearance: none;
         width: 195px;
         height: 55px;
         padding-left: 14px;
@@ -367,6 +386,11 @@
         font-size: 16px;
         line-height: 42px;
         color: #555555;
+        position: relative;
+
+
+
+
     }
 
     &__btn {
@@ -381,6 +405,11 @@
         font-size: 16px;
         line-height: 42px;
         color: #ffffff;
+        transition: background-color 0.5s;
+
+        &:hover {
+            background-color: #004288;
+        }
     }
 }
 
@@ -393,7 +422,7 @@
     width: 100%;
     margin: 0 auto;
     padding-top: 186px;
-    padding-bottom: 121px;
+    padding-bottom: 159px;
 
 
     &__items {
@@ -409,7 +438,12 @@
         text-align: center;
         transition: all 0.7s;
 
+        &:nth-child(2) {
+            margin: 0 90px
+        }
+
         &:hover {
+            background-color: #fff;
             box-shadow: 0px 2px 50px 0px rgba(0, 0, 0, 0.07);
             border-radius: 4px;
             transform: scale(1.2);
@@ -481,6 +515,8 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            margin-top: 2px;
+            margin-right: 4px;
         }
     }
 
@@ -494,6 +530,7 @@
         background-color: transparent;
         border: none;
         margin: 0 10px;
+        cursor: pointer;
     }
 
     .swiper-container {
@@ -522,14 +559,14 @@
 
                 &__info {
                     display: flex;
-                    margin-bottom: 41px;
+                    margin-bottom: 25px;
 
                 }
 
                 &__img {
                     width: 30px;
                     height: 30px;
-                    margin-right: 14px;
+                    margin-right: 8px;
                     vertical-align: middle;
                     border-radius: 50%;
                     background-position: center;
@@ -575,12 +612,12 @@
                     line-height: 30px;
                     font-weight: 400;
                     color: #555555;
-                    margin-bottom: 40px;
+                    margin-bottom: 31px;
                 }
 
                 &__tags {
                     display: flex;
-                    margin-bottom: 50px;
+                    margin-bottom: 63px;
                 }
 
                 &__tag {
@@ -614,7 +651,7 @@
                 &__like {
                     display: flex;
                     align-items: center;
-                    margin-right: 10px;
+                    margin-right: 20px;
 
                     .card__heart {
                         font-size: 15px;
@@ -638,16 +675,19 @@
                         margin-right: 5px;
                     }
                 }
+
+                .card__ratings {
+                    width: 100px;
+                    margin-left: auto;
+                    // margin-right: 30px;
+
+                    .jq-ry-container {
+                        padding: 7px 5px;
+                    }
+                }
             }
         }
     }
-
-
-
 }
-
-
-
-
 
 // end weekly-products
