--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -28,3 +28,174 @@ body {
     margin: 0 auto;
     padding: 0 15px;
 }
+
+.top-wrap {
+    padding: 32px 30px;
+    margin-bottom: 50px;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.inner-wrap {
+    max-width: 1140px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+.top-title {
+    font-size: 30px;
+    line-height: 28px;
+    color: #000000;
+}
+
+.card {
+    padding: 50px 50px 24px 50px;
+    background-color: #fff;
+
+    &__title {
+        display: inline-block;
+        font-size: 24px;
+        font-weight: 500;
+        color: #000000;
+        margin-bottom: 15px;
+        text-decoration: none;
+    }
+
+    &__info {
+        display: flex;
+        margin-bottom: 25px;
+
+    }
+
+    &__img {
+        width: 30px;
+        height: 30px;
+        margin-right: 8px;
+        vertical-align: middle;
+        border-radius: 50%;
+        background-position: center;
+        display: inline-block;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    &__name-user {
+        display: inline-block;
+        text-decoration: none;
+        font-size: 15px;
+        line-height: 30px;
+        color: #000000;
+        margin-right: 21px;
+    }
+
+    &__category {
+        font-size: 15px;
+        line-height: 30px;
+        display: inline-block;
+        vertical-align: middle;
+        text-decoration: none;
+        color: #7347c1;
+        padding-left: 25px;
+        position: relative;
+        // display: flex;
+        // align-items: center;
+
+        &::before {
+            content: "";
+            width: 16px;
+            height: 16px;
+            background-image: url(../images/wordpress.svg);
+            position: absolute;
+            left: 0;
+            top: 5px;
+        }
+    }
+
+    &__text {
+        font-size: 16px;
+        line-height: 30px;
+        font-weight: 400;
+        color: #555555;
+        margin-bottom: 31px;
+    }
+
+    &__tags {
+        display: flex;
+        margin-bottom: 63px;
+    }
+
+    &__tag {
+        background-color: #f1f3f6;
+        border-radius: 24px;
+        padding: 3px 14px;
+        text-align: center;
+        font-size: 15px;
+        line-height: 30px;
+        font-weight: 400;
+        color: #868c96;
+        margin: 0 4px;
+        transition: background-color, box-shadow 0.7s;
+
+        &:hover {
+            background-color: #0674ec;
+            color: #fff;
+            box-shadow: inset 0 0 2px 2px rgba($color: #000, $alpha: 0.5)
+        }
+    }
+
+    &__bottom {
+        display: flex;
+    }
+
+    &__price {
+        margin-right: 20px;
+        padding: 9px 19px;
+        background-color: #0674ec;
+        border-radius: 16px;
+        text-align: center;
+        font-size: 15px;
+        line-height: 15px;
+        font-weight: 500;
+        color: #ffffff;
+    }
+
+    &__like {
+        display: flex;
+        align-items: center;
+        margin-right: 20px;
+
+        .card__heart {
+            font-size: 15px;
+            line-height: 30px;
+            color: #7347c1;
+            margin-right: 5px;
+        }
+
+        .card__like-quantity {
+            color: #555555;
+        }
+    }
+
+    &__cart {
+        display: flex;
+        align-items: center;
+        margin-right: 15px;
+        color: #0674ec;
+
+        .card__cart-icon {
+            margin-right: 5px;
+        }
+    }
+
+    .card__ratings {
+        width: 100px;
+        margin-left: auto;
+        // margin-right: 30px;
+
+        .jq-ry-container {
+            padding: 7px 5px;
+        }
+    }
+}
