--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -487,25 +487,8 @@
     padding: 120px 0;
     background-color: #eff1f5;
 
-    &__inner {
-        max-width: 1140px;
-        width: 100%;
-        margin: 0 auto;
-    }
 
     &__top {
-        padding: 32px 30px;
-        margin-bottom: 50px;
-        background-color: #fff;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-
-        .weekly-products__top-title {
-            font-size: 30px;
-            line-height: 28px;
-            color: #000000;
-        }
 
         .weekly-products__top-btns {
             width: 110px;
@@ -541,153 +524,168 @@
             display: flex;
 
             .slide__img {
+                display: block;
                 flex: 0 1 555px;
             }
 
-            .card {
-                padding: 50px 50px 24px 50px;
-                background-color: #fff;
-
-                &__title {
-                    display: inline-block;
-                    font-size: 24px;
-                    font-weight: 500;
-                    color: #000000;
-                    margin-bottom: 15px;
-                    text-decoration: none;
-                }
-
-                &__info {
-                    display: flex;
-                    margin-bottom: 25px;
-
-                }
-
-                &__img {
-                    width: 30px;
-                    height: 30px;
-                    margin-right: 8px;
-                    vertical-align: middle;
-                    border-radius: 50%;
-                    background-position: center;
-                    display: inline-block;
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                }
-
-                &__name-user {
-                    display: inline-block;
-                    text-decoration: none;
-                    font-size: 15px;
-                    line-height: 30px;
-                    color: #000000;
-                    margin-right: 21px;
-                }
-
-                &__category {
-                    font-size: 15px;
-                    line-height: 30px;
-                    display: inline-block;
-                    vertical-align: middle;
-                    text-decoration: none;
-                    color: #7347c1;
-                    padding-left: 25px;
-                    position: relative;
-                    // display: flex;
-                    // align-items: center;
-
-                    &::before {
-                        content: "";
-                        width: 16px;
-                        height: 16px;
-                        background-image: url(../images/wordpress.svg);
-                        position: absolute;
-                        left: 0;
-                        top: 5px;
-                    }
-                }
-
-                &__text {
-                    font-size: 16px;
-                    line-height: 30px;
-                    font-weight: 400;
-                    color: #555555;
-                    margin-bottom: 31px;
-                }
-
-                &__tags {
-                    display: flex;
-                    margin-bottom: 63px;
-                }
-
-                &__tag {
-                    background-color: #f1f3f6;
-                    border-radius: 24px;
-                    padding: 3px 14px;
-                    text-align: center;
-                    font-size: 15px;
-                    line-height: 30px;
-                    font-weight: 400;
-                    color: #868c96;
-                    margin: 0 4px;
-                }
-
-                &__bottom {
-                    display: flex;
-                }
-
-                &__price {
-                    margin-right: 20px;
-                    padding: 9px 19px;
-                    background-color: #0674ec;
-                    border-radius: 16px;
-                    text-align: center;
-                    font-size: 15px;
-                    line-height: 15px;
-                    font-weight: 500;
-                    color: #ffffff;
-                }
-
-                &__like {
-                    display: flex;
-                    align-items: center;
-                    margin-right: 20px;
-
-                    .card__heart {
-                        font-size: 15px;
-                        line-height: 30px;
-                        color: #7347c1;
-                        margin-right: 5px;
-                    }
-
-                    .card__like-quantity {
-                        color: #555555;
-                    }
-                }
-
-                &__cart {
-                    display: flex;
-                    align-items: center;
-                    margin-right: 15px;
-                    color: #0674ec;
-
-                    .card__cart-icon {
-                        margin-right: 5px;
-                    }
-                }
-
-                .card__ratings {
-                    width: 100px;
-                    margin-left: auto;
-                    // margin-right: 30px;
-
-                    .jq-ry-container {
-                        padding: 7px 5px;
-                    }
-                }
+            .slide__card {
+                flex: 0 1 585px;
             }
+
+
         }
     }
 }
 
 // end weekly-products
+
+
+
+.realese-products {
+    background-color: #f6f7fb;
+    padding: 120px 0;
+
+    .realese-products__top {
+        margin-bottom: 35px;
+        padding-top: 41px;
+    }
+
+    .realese-products__top-filter {
+        position: relative;
+        cursor: pointer;
+        font-size: 16px;
+        line-height: 20px;
+        padding-right: 30px;
+        color: #747b86;
+        background-image: url(../images/filter.svg);
+        background-repeat: no-repeat;
+        background-position: right center;
+        background-size: contain;
+
+        .filter__list {
+            display: none;
+            padding: 27px 53px 27px 27px;
+            position: absolute;
+            top: 40px;
+            right: -20px;
+            box-shadow: 0px 5px 40px 0px rgba(82, 85, 90, 0.2);
+            width: 183px;
+            background-color: #fff;
+
+            &:before {
+                position: absolute;
+                right: 20px;
+                top: -16px;
+                content: "";
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 0 9px 16px 9px;
+                border-color: transparent transparent #fff transparent;
+                box-shadow: 0px 5px 40px 0px rgba(82, 85, 90, 0.2);
+            }
+
+            .filter__links {
+                font-size: 15px;
+                line-height: 28px;
+                color: #747b86;
+                text-decoration: none;
+
+                &:hover {
+                    color: #0674ec;
+                }
+
+            }
+
+        }
+    }
+
+    .realese-products__tags {
+        justify-content: start;
+        margin-bottom: 51px;
+    }
+
+    .realese-products__tag {
+        cursor: pointer;
+        background-color: #f1f3f6;
+        border-radius: 16px;
+        padding: 10px 18px;
+        text-align: center;
+        color: #747b86;
+        border: none;
+
+        &+.realese-products__tag {
+            margin-left: 10px;
+        }
+    }
+
+    .realese-products__cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin-bottom: 24px;
+
+
+        .card {
+            margin-bottom: 30px;
+            flex: 0 1 361px;
+            padding: 0;
+            padding-bottom: 16px;
+            display: flex;
+            flex-direction: column;
+
+            .card__picture {
+                min-height: 230px;
+                margin-bottom: 22px;
+            }
+
+            .card__title {
+                font-size: 20px;
+            }
+
+            .card__text {
+                margin-bottom: auto;
+            }
+
+            .card__info,
+            .card__text,
+            .card__bottom,
+            .card__title {
+                padding-left: 29px;
+                padding-right: 25px;
+            }
+
+            .card__bottom {
+                margin-top: 43px;
+            }
+
+            .card__price {
+                background-color: #0675ec1e;
+                color: #0674ec;
+            }
+
+            .card__cart {
+                margin-left: auto;
+            }
+        }
+    }
+
+    .realese-products__buttons {
+        display: flex;
+        justify-content: center;
+
+        .realese-products__btn {
+            padding: 21px 42px;
+            background-color: #0674ec;
+            box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.1);
+            border: none;
+            border-radius: 27.5px;
+            font-size: 16px;
+            font-weight: 400;
+            color: #ffffff;
+        }
+    }
+
+
+
+}
